Fix issue with toolbar alignment

--- a/assets/css/src/custom.css
+++ b/assets/css/src/custom.css
@@ -125,6 +125,12 @@ div[data-control='media-manager-crop-tool'] {
     }
 }
 
+.control-toolbar {
+    label {
+        display: inline-block;
+    }
+}
+
 /* layout styles */
 
 .default-layout {
